test/compile_errors/err_unreachable_after_goto.w
//! expect-error: unreachable code

fn main:
    goto 'done
    print("never")
    'done:
        print("done")
